<resources>
    <string name="app_name">sigavan</string>

    //Main Activicty
    <string name="sobreVoce">Vamos Falar Sobre Você!</string>
    <string name="nome">Nome: </string>
    <string name="dicaNome">Insira seu nome</string>
    <string name="motorista">Motorista</string>
    <string name="passageiro">Passageiro</string>
    <string name="modoUso">Modo De Uso</string>
    <string name="confirmar">Confirmar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="telefone">Telefone: </string>
    <string name="dicaTelefone">55999999999</string>
    <string name="placeholder">placeholder</string>
    <string name="errocadastro">Dados preenchidos incorretamente. Por favor, preencha o número de telefone e o modo de uso corretamente.</string>
    <string name="identificando">Identificando usuário</string>
    <string name="porfavoraguarde">Por favor aguarde.</string>

    //FULLSCREEN ACTIVITY
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">COMEÇAR!</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    //PASSAGEIRO ACTIVITY
    <string name="presente">Presente!</string>
    <string name="ausente">Ausente!</string>
    <string name="domingo">Domingo</string>
    <string name="segunda">Segunda</string>
    <string name="terca">Terça</string>
    <string name="quarta">Quarta</string>
    <string name="quinta">Quinta</string>
    <string name="sexta">Sexta</string>
    <string name="sabado">Sábado</string>
    <string name="primeira_parte_mensagem">Presenca atual definida como </string>
    <string name="segunda_parte_mensagem"> Caso queira alterar a presença, selecione uma opção e confirme</string>

    //Splash Acitivty
    <string name="icone">Ícone do Aplicativo</string>
    <string name="title_activity_motorista">MotoristaActivity</string>

    //Cadastrar Faculdade
    <string name="cadastrar_faculdade">Cadastrar Faculdade</string>
    <string name="dica_faculdade">Nome da Faculdade</string>
    <string name="turno">Turno</string>
    <string name="manha">Manhã</string>
    <string name="tarde">Tarde</string>
    <string name="noite">Noite</string>
    <string name="errofaculdade">Dados preenchidos incorretamente. Por favor, preencha o nome da faculdade e o turno corretamente.</string>

    //Cadastrar Passageiro
    <string name="cadastrar_passageiro">Cadastrar Passageiro</string>
    <string name="dicaEmailPassageiro">Insira o email do passageiro</string>
    <string name="faculdade">Faculdade: </string>
    <string name="email">Email: </string>
    <string name="sim">SIM</string>
    <string name="nao">NÃO</string>
    <string name="dialog_mensagem">Gostaria continuar adicionando passageiros?</string>
    <string name="erropassageiro">Dado preenchido incorretamente. Por favor, preencha o email do passageiro corretamente.</string>

    //Completar Cadastro Passageiro
    <string name="completar_cadastro">Completando seu cadastro</string>
    <string name="dias_aula">Selecione os dias da semana que você tem aula:</string>
</resources>
