<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <TextView
        android:id="@+id/textoPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:gravity="center"
        android:text="@string/sobreVoce"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/nomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textoPrincipal"
        android:layout_marginTop="88dp"
        android:text="@string/nome"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/nomeUsuarioTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/nomeTextView"
        android:layout_marginStart="115dp"
        android:textSize="20dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textoPrincipal"
        android:layout_marginTop="127dp"
        android:text="@string/telefone"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/telefoneEditText"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textoPrincipal"
        android:layout_below="@+id/nomeTextView"
        android:gravity="center"
        android:hint="@string/dicaTelefone"
        android:inputType="phone"
        android:textSize="20dp" />

    <CheckBox
        android:id="@+id/domingoCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/confirmarButton"
        android:text="@string/domingo" />

    <CheckBox
        android:id="@+id/segundaCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="189dp"
        android:text="@string/segunda" />

    <CheckBox
        android:id="@+id/tercaCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/cancelarButton"
        android:layout_alignTop="@+id/segundaCheckBox"
        android:text="@string/terca" />

    <CheckBox
        android:id="@+id/quartaCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/confirmarButton"
        android:layout_alignTop="@+id/segundaCheckBox"
        android:text="@string/quarta" />

    <CheckBox
        android:id="@+id/quintaCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/segundaCheckBox"
        android:layout_marginEnd="26dp"
        android:text="@string/quinta" />

    <CheckBox
        android:id="@+id/sextaCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="97dp"
        android:text="@string/sexta" />

    <CheckBox
        android:id="@+id/sabadoCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textoPrincipal"
        android:layout_centerVertical="true"
        android:text="@string/sabado" />

    <RadioGroup
        android:id="@+id/modoDeUsoRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="112dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/modoUso"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/Motorista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motorista"
            android:textSize="17dp" />

        <RadioButton
            android:id="@+id/Passageiro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passageiro"
            android:textSize="17dp" />
    </RadioGroup>

    <Button
        android:id="@+id/confirmarButton"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textoPrincipal"
        android:layout_alignTop="@+id/cancelarButton"
        android:text="@string/confirmar"
        android:textSize="20dp" />

    <Button
        android:id="@+id/cancelarButton"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textoPrincipal"
        android:layout_marginBottom="42dp"
        android:text="@string/Cancelar"
        android:textSize="20dp" />

</RelativeLayout>