<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="22dp"
        />

    <TextView
        android:id="@+id/mensagemTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="112dp"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/dataTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="165dp"
        android:textSize="20dp" />

    <CheckBox
        android:id="@+id/domingoCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/segundaCheckBox"
        android:layout_toStartOf="@+id/confirmarPresencaButton"
        android:text="@string/domingo" />

    <CheckBox
        android:id="@+id/segundaCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dataTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/segunda" />

    <CheckBox
        android:id="@+id/tercaCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/sabadoCheckbox"
        android:layout_alignTop="@+id/domingoCheckbox"
        android:text="@string/terca" />

    <CheckBox
        android:id="@+id/quartaCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/quarta" />

    <CheckBox
        android:id="@+id/quintaCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/domingoCheckbox"
        android:text="@string/quinta" />

    <CheckBox
        android:id="@+id/sextaCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/mensagemTextView"
        android:layout_centerVertical="true"
        android:text="@string/sexta" />

    <CheckBox
        android:id="@+id/sabadoCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/confirmarPresencaButton"
        android:text="@string/sabado" />


    <RadioGroup
        android:id="@+id/presencaRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="160dp">

        <RadioButton
            android:id="@+id/presente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/presente"
            android:textSize="17dp" />

        <RadioButton
            android:id="@+id/ausente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ausente"
            android:textSize="17dp" />
    </RadioGroup>

    <Button
        android:id="@+id/confirmarPresencaButton"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:text="@string/confirmar"
        android:textSize="20dp" />

</RelativeLayout>