<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="22dp"
        />

    <TextView
        android:id="@+id/cadastrarFaculdadeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="126dp"
        android:text="@string/cadastrar_faculdade"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/nomeFaculdadeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="172dp"
        android:layout_toStartOf="@+id/cadastrarFaculdadeTextView"
        android:text="@string/nome"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/nomeFaculdadeEditText"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/nomeFaculdadeTextView"
        android:gravity="center"
        android:hint="@string/dica_faculdade"
        android:inputType="text"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/turnoFaculdadeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/nomeFaculdadeTextView"
        android:layout_marginTop="240dp"
        android:text="@string/turno"
        android:textSize="20dp" />


    <RadioGroup
        android:id="@+id/turnoRadioGroup"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/confirmarPresencaButton"
        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/manha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manha"
            android:textSize="17dp" />

        <RadioButton
            android:id="@+id/tarde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tarde"
            android:textSize="17dp" />

        <RadioButton
            android:id="@+id/noite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noite"
            android:textSize="17dp" />
    </RadioGroup>

    <Button
        android:id="@+id/confirmarCadastroButton"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:text="@string/confirmar"
        android:textSize="20dp" />

</RelativeLayout>