<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/completandocadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:text="@string/completar_cadastro"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/textoPrincipalCadastroPassageiro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/completandocadastro"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:text="@string/dias_aula"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <CheckBox
        android:id="@+id/segundaCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textoPrincipalCadastroPassageiro"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:text="@string/segunda"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <CheckBox
        android:id="@+id/tercaCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/segundaCheckbox"
        android:layout_below="@id/textoPrincipalCadastroPassageiro"
        android:layout_centerHorizontal="true"
        android:text="@string/terca"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <CheckBox
        android:id="@+id/quartaCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/sabadoCheckbox"
        android:layout_alignTop="@id/segundaCheckbox"
        android:layout_below="@id/textoPrincipalCadastroPassageiro"
        android:text="@string/quarta"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <CheckBox
        android:id="@+id/quintaCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/segundaCheckbox"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/quinta"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <CheckBox
        android:id="@+id/sextaCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tercaCheckbox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/sexta"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <CheckBox
        android:id="@+id/sabadoCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/segundaCheckbox"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/sabado"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <CheckBox
        android:id="@+id/domingoCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/sextaCheckbox"
        android:layout_below="@id/quintaCheckbox"
        android:layout_marginTop="20dp"
        android:text="@string/domingo"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/confirmarDias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/domingoCheckbox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/confirmar" />
</RelativeLayout>
