<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cadastrarPassageiroTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/cadastrar_passageiro"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cadastrarPassageiroTextView"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:text="@string/email"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/emailPassageiroEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cadastrarPassageiroTextView"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_toEndOf="@id/emailTextView"
        android:hint="@string/dicaEmailPassageiro"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/faculdadeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailTextView"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:text="@string/faculdade"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <Spinner
        android:id="@+id/faculdadeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailPassageiroEditText"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="45dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_toEndOf="@id/faculdadeTextView" />

    <Button
        android:id="@+id/confirmarCadastroButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/faculdadeSpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:text="@string/confirmar"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
</RelativeLayout>